@@ -1,3 +1,9 @@
+Date: May 20
+	Mostly integrated with new versions of  GLVisualize,  AbstractGPUArray, 
+	      GeometryTypes,ColorType
+	Improved treatment of tag <rotateModel>
+	Added tags for synchronisation based on signals (Reactive.jl), tested
+	Added tests
 Date: May 10
 	Moved to version of Julia 0.4 requiring new Tuple type syntax
 	Moved to GLVisualize,  AbstractGPUArray, GeometryTypes,ColorTypes
